--- a/src/Pages/Todo/Todo.scss
+++ b/src/Pages/Todo/Todo.scss
@@ -12,7 +12,7 @@ body{
     height: fit-content;
     text-align: center;
     font-family: Arial, sans-serif;
-    border-radius: 12px;
+    border-radius: 12px;;
   }
 
   h1{
@@ -72,5 +72,7 @@ body{
 
   .task-view{
     flex: 1;
+    overflow:hidden;
+    margin-left: 10px;
   }
   
